kubernetes/deployment-small.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: workerV1
  template:
    metadata:
      labels:
        app: workerV1
    spec:
      containers:
        - name: workerV1
          image: 'us-central1-docker.pkg.dev/primesnumbers/primes-numbers/prime_container:latest'
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "250Mi"
              cpu: "3000m"
