kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  labels:
    app: workerV1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: workerV1
  template:
    metadata:
      labels:
        app: workerV1
    spec:
      containers:
        - name: worker
          image: gcr.io/$PROJECT_ID/worker
          ports:
            - containerPort: 8080
